--- a/index.html
+++ b/index.html
@@ -84,13 +84,13 @@
     <div class="row well">
 
 <h4>Visualization choice : </h4>
-The visualization allow the user to infer relations between agencies .As it portrays the relation between the number of projects and total lifecycle cost each agency through a bubble chart .It also allows the user to compare between the total cost variance of each agency (under budget, over budget or within budget).
+The visualisation allows the user to infer relations between agencies .As it portrays the relation between the number of projects and total lifecycle cost of each agency through a bubble chart .It also allows the user to compare between the total cost variance of each agency (under budget, over budget or within budget).
 
 <h4>Interactivity : </h4>
-The interaction enables the user to hover to check the agencies details (Name, number of project and total lifecycle cost). Also it allows the user to categorize the agencies by cost variance.
+The interaction enables the user to check the agencies details (Name, number of project and total lifecycle cost) by hovering on each bubble. Also it allows the user to filter the agencies by cost variance by clicking “Categorise by cost variance” button. 
 
 <h4>Audience : </h4>
-General audience with no experience in invesments , who wants to have a general idea of the US departments and the number of projects , total lifecycle cost and cost variance within each agency .
+General audience with no experience in investments and financial data, who wants to have a general idea of the US departments and the total number of projects, total lifecycle cost and cost variance within each agency.
 
 <h4>Use case : </h4> 
 1) The user click on "agencies" from nav bar.<br>
