--- a/vis2.html
+++ b/vis2.html
@@ -59,13 +59,13 @@
   <div class="row well">
 
 <h4>Visualization choice : </h4>
-This visualization allows the user to check the agencies projects, their starting date and the schedule variance through a scatter plot. 
-
+This visualisation allows the user to check the projects in each agency, their starting date and schedule variance through a scatter plot.It lets the user to detect any abnormal schedule variance in an agency and relate it to the project’s cost variance and start year.
 <h4>Interactivity : </h4>
-The interaction allows the user to filter the projects according to a specific agency through a dropdown list. Also the project name and start date appear on mouse hover.
+The interaction allows the user to filter the projects according to a specific agency through a drop down list. Also the project name, start date,completion date and schedule variance appear on a tooltip .
+
 
 <h4>Audience : </h4>
-More specialized and experienced audience , that are interested in projects within specific agencies . They can recognize the relation between the schedule variance of the projects and the year in which the project has started and would finish.Also they can relate these patterns with the cost variance "color of circles". 
+More specialised and experienced audience, who are interested in projects within specific agencies . They can recognise the relation between the schedule variance of the projects and the year in which the project has started and would finish.Also they can relate these patterns with the cost variance "colour of circles".
 
 <h4>Use case : </h4> 
 1) The user click on "Projects" from nav bar.<br>
