--- a/vis2.html
+++ b/vis2.html
@@ -45,10 +45,10 @@
   </div>
   <div class="well">
     <svg width="500" height="120">
-      <circle cx="25" cy="25" r="15" fill="green"/> <text x="45" y="30">Under Budget</text>
-      <circle cx="25" cy="60" r="15" fill="#FFE228"/> <text x="45" y="65">Within Budget</text>
+      <circle cx="25" cy="25" r="15" fill="green"/> <text x="45" y="30">Less than 10 % </text>
+      <circle cx="25" cy="60" r="15" fill="#FFE228"/> <text x="45" y="65">Between 10 % and 30%</text>
 
-      <circle cx="25" cy="95" r="15" fill="red"/> <text x="45" y="100">Over Budget</text>
+      <circle cx="25" cy="95" r="15" fill="red"/> <text x="45" y="100">More than 30 %</text>
 
 
 
