--- a/vis2.html
+++ b/vis2.html
@@ -44,6 +44,7 @@
     <select id="drop" class="form-control input-sm"></select>
   </div>
   <div class="well">
+   Cost Variance percentage :
     <svg width="500" height="120">
       <circle cx="25" cy="25" r="15" fill="green"/> <text x="45" y="30">Less than 10 % </text>
       <circle cx="25" cy="60" r="15" fill="#FFE228"/> <text x="45" y="65">Between 10 % and 30%</text>
